refactor: mejorar seguridad del API con configuracion y filtro JWT